# snark-bn254-verifier-wasm

./: Cargo.toml  NOTES.md  README.md
examples/binaries/: fibonacci_groth16_proof.bin.json  sha2_plonk_proof.bin.json
examples/script/: Cargo.toml
examples/script/src/: main.rs
go/: go.mod  groth16.go  plonk.go  plonk_vk.go
verifier/: Cargo.toml  README.md  index.html  run.sh
verifier-app/: README.md  package.json
verifier-app/src/: App.tsx  SnarkVerifier.tsx
verifier/binaries/: fibonacci_plonk_proof.bin.json  is-prime_groth16_proof.bin.json  is-prime_plonk_proof.bin.json  sha2_groth16_proof.bin.json  tendermint_groth16_proof.bin.json  tendermint_plonk_proof.bin.json
verifier/src/: converter.rs  lib.rs
verifier/src/groth16/: converter.rs
verifier/src/plonk/: converter.rs  verify.rs
vk/circuits/: Cargo.toml
vk/circuits/src/: main.rs
