[package]
name = "snark-bn254-verifier"
authors = ["Bhargav Annem"]
description = "A rust verifier for BN254 curve"
repository = "https://github.com/succinctlabs/snark-bn254-verifier"
keywords = ["zero-knowledge", "cryptography", "zkSNARK", "SNARK", "gnark"]
categories = ["cryptography"]
readme = "README.md"
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2021"
version = "1.0.2"

[lib]
crate-type = ["cdylib"]

[dependencies]
bn = { git = "https://github.com/sp1-patches/bn", branch = "patch-v0.7.0", package = "substrate-bn" }
# sp1-sdk = { path = "../../sp1/crates/sdk", default-features = false }
lazy_static = "1.5.0"
num-bigint = "0.4.6"
num-traits = "0.2.19"
rand = "0.8.5"
getrandom = {version="*", features=["js"]}
sha2 = "0.10.8"
thiserror = "1.0.63"
wasm-bindgen = "0.2.93"
wee_alloc = "0.4.5"
web-sys = { version = "0.3.70", features = ["Window"] }
serde_json = "1.0.128"
hex = "0.4.3"
# Not compatible with wasm.
sp1-sdk = { version = "2.0.0", default-features = false }
reqwest = { version = "0.11", features = ["json"] }
tempfile = "3.2"
bincode = "1.3.3"
